--- a/notes/about.qmd
+++ b/notes/about.qmd
@@ -24,4 +24,4 @@ The materials for [Module 3](adjectives/) were developed partly in collaboration
 
 ## License <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
 
-<span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Probabilistic dynamic semantics</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://juliangrove.github.io" property="cc:attributionName" rel="cc:attributionURL">Julian Grove</a> and <a xmlns:cc="http://creativecommons.org/ns#" href="http://aaronstevenwhite.io" property="cc:attributionName" rel="cc:attributionURL">Aaron Steven White</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>. Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/juliangrove/pds-2025" rel="dct:source">https://github.com/juliangrove/pds-2025</a>.
+<span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Probabilistic dynamic semantics</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://juliangrove.github.io" property="cc:attributionName" rel="cc:attributionURL">Julian Grove</a> and <a xmlns:cc="http://creativecommons.org/ns#" href="http://aaronstevenwhite.io" property="cc:attributionName" rel="cc:attributionURL">Aaron Steven White</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>. Based on work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/juliangrove/pds-2025" rel="dct:source">https://github.com/juliangrove/pds-2025</a>.
